[Fix #24] Increase font-size/font-weight for small items on mobile.

--- a/osm_jet/static/jet/css/_changeform.scss
+++ b/osm_jet/static/jet/css/_changeform.scss
@@ -348,6 +348,8 @@ fieldset.monospace textarea {
     @include for-phone {
       display: block;
       width: 100%;
+
+      font-weight: 700;
     }
 
     &:hover, &:focus {
